spade-tests/src/snapshots/spade_tests__hir_lowering__tests__instantiating_builtin_generic_which_is_non_intrinsic_is_error.snap
---
source: spade-tests/src/hir_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Generic builtins can not be instanciated
  ┌─ testinput:4:5
  │
1 │ fn a<T>() -> T __builtin__
  │ -------------------------- Because this is a generic __builtin__
  ·
4 │     a()
  │     ^^^ Invalid instance


